--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -2,6 +2,429 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import json\n",
+    "import os\n",
+    "import re\n",
+    "from sqlalchemy import create_engine\n",
+    "from config import dp_password"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'C:\\\\Users\\\\Stephen\\\\Desktop\\\\Class Projects\\\\Movies-ETL'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.getcwd()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_dir = 'C:\\\\Users\\\\Stephen\\\\Desktop\\\\Class Projects\\\\Movies-ETL\\\\data'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(f'{file_dir}/wikipedia-movies.json', mode='r') as file:\n",
+    "    wiki_movies_raw = json.load(file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7311"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(wiki_movies_raw)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'url': 'https://en.wikipedia.org/wiki/The_Adventures_of_Ford_Fairlane',\n",
+       "  'year': 1990,\n",
+       "  'imdb_link': 'https://www.imdb.com/title/tt0098987/',\n",
+       "  'title': 'The Adventures of Ford Fairlane',\n",
+       "  'Directed by': 'Renny Harlin',\n",
+       "  'Produced by': ['Steve Perry', 'Joel Silver'],\n",
+       "  'Screenplay by': ['David Arnott', 'James Cappe', 'Daniel Waters'],\n",
+       "  'Story by': ['David Arnott', 'James Cappe'],\n",
+       "  'Based on': ['Characters', 'by Rex Weiner'],\n",
+       "  'Starring': ['Andrew Dice Clay',\n",
+       "   'Wayne Newton',\n",
+       "   'Priscilla Presley',\n",
+       "   'Lauren Holly',\n",
+       "   'Morris Day',\n",
+       "   'Robert Englund',\n",
+       "   \"Ed O'Neill\"],\n",
+       "  'Narrated by': 'Andrew \"Dice\" Clay',\n",
+       "  'Music by': ['Cliff Eidelman', 'Yello'],\n",
+       "  'Cinematography': 'Oliver Wood',\n",
+       "  'Edited by': 'Michael Tronick',\n",
+       "  'Productioncompany ': 'Silver Pictures',\n",
+       "  'Distributed by': '20th Century Fox',\n",
+       "  'Release date': ['July 11, 1990', '(', '1990-07-11', ')'],\n",
+       "  'Running time': '102 minutes',\n",
+       "  'Country': 'United States',\n",
+       "  'Language': 'English',\n",
+       "  'Budget': '$20 million',\n",
+       "  'Box office': '$21.4 million'},\n",
+       " {'url': 'https://en.wikipedia.org/wiki/After_Dark,_My_Sweet',\n",
+       "  'year': 1990,\n",
+       "  'imdb_link': 'https://www.imdb.com/title/tt0098994/',\n",
+       "  'title': 'After Dark, My Sweet',\n",
+       "  'Directed by': 'James Foley',\n",
+       "  'Produced by': ['Ric Kidney', 'Robert Redlin'],\n",
+       "  'Screenplay by': ['James Foley', 'Robert Redlin'],\n",
+       "  'Based on': ['the novel', 'After Dark, My Sweet', 'by', 'Jim Thompson'],\n",
+       "  'Starring': ['Jason Patric',\n",
+       "   'Rachel Ward',\n",
+       "   'Bruce Dern',\n",
+       "   'George Dickerson'],\n",
+       "  'Music by': 'Maurice Jarre',\n",
+       "  'Cinematography': 'Mark Plummer',\n",
+       "  'Edited by': 'Howard E. Smith',\n",
+       "  'Productioncompany ': 'Avenue Pictures',\n",
+       "  'Distributed by': 'Avenue Pictures',\n",
+       "  'Release date': ['May 17, 1990',\n",
+       "   '(',\n",
+       "   '1990-05-17',\n",
+       "   ')',\n",
+       "   '(Cannes Film Market)',\n",
+       "   'August 24, 1990',\n",
+       "   '(',\n",
+       "   '1990-08-24',\n",
+       "   ')',\n",
+       "   '(United States)'],\n",
+       "  'Running time': '114 minutes',\n",
+       "  'Country': 'United States',\n",
+       "  'Language': 'English',\n",
+       "  'Budget': '$6 million',\n",
+       "  'Box office': '$2.7 million'},\n",
+       " {'url': 'https://en.wikipedia.org/wiki/Air_America_(film)',\n",
+       "  'year': 1990,\n",
+       "  'imdb_link': 'https://www.imdb.com/title/tt0099005/',\n",
+       "  'title': 'Air America',\n",
+       "  'Directed by': 'Roger Spottiswoode',\n",
+       "  'Produced by': 'Daniel Melnick',\n",
+       "  'Screenplay by': ['John Eskow', 'Richard Rush'],\n",
+       "  'Based on': ['Air America', 'by', 'Christopher Robbins'],\n",
+       "  'Starring': ['Mel Gibson',\n",
+       "   'Robert Downey Jr.',\n",
+       "   'Nancy Travis',\n",
+       "   'David Marshall Grant',\n",
+       "   'Lane Smith'],\n",
+       "  'Music by': 'Charles Gross',\n",
+       "  'Cinematography': 'Roger Deakins',\n",
+       "  'Edited by': ['John Bloom', 'Lois Freeman-Fox'],\n",
+       "  'Productioncompany ': ['Carolco Pictures', 'IndieProd Company'],\n",
+       "  'Distributed by': 'TriStar Pictures',\n",
+       "  'Release date': ['August 10, 1990', '(', '1990-08-10', ')'],\n",
+       "  'Running time': '113 minutes',\n",
+       "  'Country': 'United States',\n",
+       "  'Language': ['English', 'Lao'],\n",
+       "  'Budget': '$35 million',\n",
+       "  'Box office': '$57,718,089'},\n",
+       " {'url': 'https://en.wikipedia.org/wiki/Alice_(1990_film)',\n",
+       "  'year': 1990,\n",
+       "  'imdb_link': 'https://www.imdb.com/title/tt0099012/',\n",
+       "  'title': 'Alice',\n",
+       "  'Directed by': 'Woody Allen',\n",
+       "  'Produced by': 'Robert Greenhut',\n",
+       "  'Written by': 'Woody Allen',\n",
+       "  'Starring': ['Alec Baldwin',\n",
+       "   'Blythe Danner',\n",
+       "   'Judy Davis',\n",
+       "   'Mia Farrow',\n",
+       "   'William Hurt',\n",
+       "   'Keye Luke',\n",
+       "   'Joe Mantegna',\n",
+       "   'Bernadette Peters'],\n",
+       "  'Cinematography': 'Carlo Di Palma',\n",
+       "  'Edited by': 'Susan E. Morse',\n",
+       "  'Distributed by': 'Orion Pictures',\n",
+       "  'Release date': ['December 25, 1990', '(', '1990-12-25', ')'],\n",
+       "  'Running time': '106 minutes',\n",
+       "  'Country': 'United States',\n",
+       "  'Language': 'English',\n",
+       "  'Budget': '$12 million',\n",
+       "  'Box office': '$7,331,647'},\n",
+       " {'url': 'https://en.wikipedia.org/wiki/Almost_an_Angel',\n",
+       "  'year': 1990,\n",
+       "  'imdb_link': 'https://www.imdb.com/title/tt0099018/',\n",
+       "  'title': 'Almost an Angel',\n",
+       "  'Directed by': 'John Cornell',\n",
+       "  'Produced by': 'John Cornell',\n",
+       "  'Written by': 'Paul Hogan',\n",
+       "  'Starring': ['Paul Hogan', 'Elias Koteas', 'Linda Kozlowski'],\n",
+       "  'Music by': 'Maurice Jarre',\n",
+       "  'Cinematography': 'Russell Boyd',\n",
+       "  'Edited by': 'David Stiven',\n",
+       "  'Distributed by': 'Paramount Pictures',\n",
+       "  'Release date': 'December 19, 1990',\n",
+       "  'Running time': '95 minutes',\n",
+       "  'Country': 'US',\n",
+       "  'Language': 'English',\n",
+       "  'Budget': '$25 million',\n",
+       "  'Box office': '$6,939,946 (USA)'}]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# First 5 records\n",
+    "wiki_movies_raw[:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'url': 'https://en.wikipedia.org/wiki/Holmes_%26_Watson',\n",
+       "  'year': 2018,\n",
+       "  'imdb_link': 'https://www.imdb.com/title/tt1255919/',\n",
+       "  'title': 'Holmes & Watson',\n",
+       "  'Directed by': 'Etan Cohen',\n",
+       "  'Produced by': ['Will Ferrell',\n",
+       "   'Adam McKay',\n",
+       "   'Jimmy Miller',\n",
+       "   'Clayton Townsend'],\n",
+       "  'Screenplay by': 'Etan Cohen',\n",
+       "  'Based on': ['Sherlock Holmes',\n",
+       "   'and',\n",
+       "   'Dr. Watson',\n",
+       "   'by',\n",
+       "   'Sir Arthur Conan Doyle'],\n",
+       "  'Starring': ['Will Ferrell',\n",
+       "   'John C. Reilly',\n",
+       "   'Rebecca Hall',\n",
+       "   'Rob Brydon',\n",
+       "   'Steve Coogan',\n",
+       "   'Ralph Fiennes'],\n",
+       "  'Music by': 'Mark Mothersbaugh',\n",
+       "  'Cinematography': 'Oliver Wood',\n",
+       "  'Edited by': 'Dean Zimmerman',\n",
+       "  'Productioncompanies ': ['Columbia Pictures',\n",
+       "   'Gary Sanchez Productions',\n",
+       "   'Mosaic Media Group',\n",
+       "   'Mimran Schur Pictures'],\n",
+       "  'Distributed by': 'Sony Pictures Releasing',\n",
+       "  'Release date': ['December 25, 2018',\n",
+       "   '(',\n",
+       "   '2018-12-25',\n",
+       "   ')',\n",
+       "   '(United States)'],\n",
+       "  'Running time': '90 minutes',\n",
+       "  'Country': 'United States',\n",
+       "  'Language': 'English',\n",
+       "  'Budget': '$42 million',\n",
+       "  'Box office': '$41.9 million'},\n",
+       " {'url': 'https://en.wikipedia.org/wiki/Vice_(2018_film)',\n",
+       "  'year': 2018,\n",
+       "  'imdb_link': 'https://www.imdb.com/title/tt6266538/',\n",
+       "  'title': 'Vice',\n",
+       "  'Directed by': 'Adam McKay',\n",
+       "  'Produced by': ['Brad Pitt',\n",
+       "   'Dede Gardner',\n",
+       "   'Jeremy Kleiner',\n",
+       "   'Kevin J. Messick',\n",
+       "   'Will Ferrell',\n",
+       "   'Adam McKay'],\n",
+       "  'Written by': 'Adam McKay',\n",
+       "  'Starring': ['Christian Bale',\n",
+       "   'Amy Adams',\n",
+       "   'Steve Carell',\n",
+       "   'Sam Rockwell',\n",
+       "   'Tyler Perry',\n",
+       "   'Alison Pill',\n",
+       "   'Lily Rabe',\n",
+       "   'Jesse Plemons'],\n",
+       "  'Music by': 'Nicholas Britell',\n",
+       "  'Cinematography': 'Greig Fraser',\n",
+       "  'Edited by': 'Hank Corwin',\n",
+       "  'Productioncompany ': ['Plan B Entertainment',\n",
+       "   'Gary Sanchez Productions',\n",
+       "   'Annapurna Pictures'],\n",
+       "  'Distributed by': 'Mirror Releasing',\n",
+       "  'Release date': ['December 11, 2018',\n",
+       "   '(',\n",
+       "   '2018-12-11',\n",
+       "   ')',\n",
+       "   '(',\n",
+       "   'Samuel Goldwyn Theater',\n",
+       "   ')',\n",
+       "   'December 25, 2018',\n",
+       "   '(',\n",
+       "   '2018-12-25',\n",
+       "   ')',\n",
+       "   '(United States)'],\n",
+       "  'Running time': '132 minutes',\n",
+       "  'Country': 'United States',\n",
+       "  'Language': 'English',\n",
+       "  'Budget': '$60 million',\n",
+       "  'Box office': '$76.1 million'},\n",
+       " {'url': 'https://en.wikipedia.org/wiki/On_the_Basis_of_Sex',\n",
+       "  'year': 2018,\n",
+       "  'imdb_link': 'https://www.imdb.com/title/tt4669788/',\n",
+       "  'title': 'On the Basis of Sex',\n",
+       "  'Directed by': 'Mimi Leder',\n",
+       "  'Produced by': 'Robert W. Cort',\n",
+       "  'Written by': 'Daniel Stiepleman',\n",
+       "  'Starring': ['Felicity Jones',\n",
+       "   'Armie Hammer',\n",
+       "   'Justin Theroux',\n",
+       "   'Sam Waterston',\n",
+       "   'Kathy Bates'],\n",
+       "  'Music by': 'Mychael Danna',\n",
+       "  'Cinematography': 'Michael Grady',\n",
+       "  'Edited by': 'Michelle Tesoro',\n",
+       "  'Productioncompanies ': ['Focus Features',\n",
+       "   '[1]',\n",
+       "   'Participant Media',\n",
+       "   '[1]',\n",
+       "   'Robert Cort Productions',\n",
+       "   '[1]',\n",
+       "   'Alibaba Pictures',\n",
+       "   '[2]'],\n",
+       "  'Distributed by': 'Focus Features',\n",
+       "  'Release date': ['November 8, 2018',\n",
+       "   '(',\n",
+       "   '2018-11-08',\n",
+       "   ')',\n",
+       "   '(',\n",
+       "   'AFI Fest',\n",
+       "   ')',\n",
+       "   'December 25, 2018',\n",
+       "   '(',\n",
+       "   '2018-12-25',\n",
+       "   ')',\n",
+       "   '(United States)'],\n",
+       "  'Running time': '120 minutes',\n",
+       "  'Country': 'United States',\n",
+       "  'Language': 'English',\n",
+       "  'Budget': '$20 million',\n",
+       "  'Box office': '$38.4 million'},\n",
+       " {'url': 'https://en.wikipedia.org/wiki/Destroyer_(2018_film)',\n",
+       "  'year': 2018,\n",
+       "  'imdb_link': 'https://www.imdb.com/title/tt7137380/',\n",
+       "  'title': 'Destroyer',\n",
+       "  'Directed by': 'Karyn Kusama',\n",
+       "  'Produced by': ['Fred Berger', 'Phil Hay', 'Matt Manfredi'],\n",
+       "  'Written by': ['Phil Hay', 'Matt Manfredi'],\n",
+       "  'Starring': ['Nicole Kidman',\n",
+       "   'Sebastian Stan',\n",
+       "   'Toby Kebbell',\n",
+       "   'Tatiana Maslany',\n",
+       "   'Bradley Whitford',\n",
+       "   'Jade Pettyjohn',\n",
+       "   'Scoot McNairy'],\n",
+       "  'Music by': 'Theodore Shapiro',\n",
+       "  'Cinematography': 'Julie Kirkwood',\n",
+       "  'Edited by': 'Plummy Tucker',\n",
+       "  'Productioncompany ': ['30West',\n",
+       "   'Automatik Entertainment',\n",
+       "   'Annapurna Pictures'],\n",
+       "  'Distributed by': 'Mirror Releasing',\n",
+       "  'Release date': ['August 31, 2018',\n",
+       "   '(',\n",
+       "   '2018-08-31',\n",
+       "   ')',\n",
+       "   '(',\n",
+       "   'Telluride',\n",
+       "   ')',\n",
+       "   'December 25, 2018',\n",
+       "   '(',\n",
+       "   '2018-12-25',\n",
+       "   ')',\n",
+       "   '(United States)'],\n",
+       "  'Running time': '123 minutes',\n",
+       "  'Country': 'United States',\n",
+       "  'Language': 'English',\n",
+       "  'Budget': '$9 million',\n",
+       "  'Box office': '$5.5 million'},\n",
+       " {'url': 'https://en.wikipedia.org/wiki/Black_Mirror:_Bandersnatch',\n",
+       "  'year': 2018,\n",
+       "  'imdb_link': 'https://www.imdb.com/title/tt9495224/',\n",
+       "  'title': 'Bandersnatch',\n",
+       "  'Directed by': 'David Slade',\n",
+       "  'Produced by': 'Russell McLean',\n",
+       "  'Written by': 'Charlie Brooker',\n",
+       "  'Starring': ['Fionn Whitehead',\n",
+       "   'Will Poulter',\n",
+       "   'Craig Parkinson',\n",
+       "   'Alice Lowe',\n",
+       "   'Asim Chaudhry'],\n",
+       "  'Music by': 'Brian Reitzell',\n",
+       "  'Cinematography': ['Aaron Morton', 'Jake Polonsky'],\n",
+       "  'Edited by': 'Tony Kearns',\n",
+       "  'Productioncompany ': ['House of Tomorrow', 'Netflix'],\n",
+       "  'Distributed by': 'Netflix',\n",
+       "  'Release date': ['28 December 2018', '(', '2018-12-28', ')'],\n",
+       "  'Running time': 'Variable; 90 minutes for default path',\n",
+       "  'Country': 'United Kingdom',\n",
+       "  'Language': 'English'}]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Last 5 records\n",
+    "wiki_movies_raw[-5:]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
