--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -30,7 +30,9 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
